--- a/module-solution2/style.css
+++ b/module-solution2/style.css
@@ -7,7 +7,7 @@
 body{
 	margin: 0;
 	padding: 0;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Monaco", Monospace;
 }
 
 .row{
@@ -33,7 +33,7 @@ h1 {
   overflow: none;
   text-align: center;
   border: 4px solid black;
-  width: 100px;
+  width: 150px;
   height: 40px;
   padding: 5px;
   float: right;
