--- a/module-solution2/style.css
+++ b/module-solution2/style.css
@@ -7,7 +7,7 @@
 body{
 	margin: 0;
 	padding: 0;
-  font-family: "Monaco", Monospace;
+font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 .row{
